<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rabbit4"
    android:measureWithLargestChild="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/literal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:text="@string/new_game_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/literal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_game_name_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/literal_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/game_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_game_location_hint" />

    <TextView
        android:id="@+id/literal_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_invite"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/game_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_just_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_just_me" />

        <RadioButton
            android:id="@+id/radio_by_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/new_game_by_invite" />

        <RadioButton
            android:id="@+id/radio_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_public" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.36" >

        <Button
            android:id="@+id/button_add_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="onClick_AddPois"
            android:text="@string/b_add_pois" />
        
        <Button
            android:id="@+id/button_add_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button_add_targets"
            android:enabled="false"
            android:onClick="onClick_Add_Players"
            android:text="@string/b_add_players" />

        <Button
            android:id="@+id/button_create_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="onClick_Save"
            android:text="@string/button_create" />

        <TextView
            android:id="@+id/display_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button_add_targets"
            android:minLines="100"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</LinearLayout>