<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/stop1"
        app:showAsAction="always"
        android:title="@string/new_game_title" 
        android:onClick="onClick_New_Game"/>
    
    <item
        android:id="@+id/action_join_game"
        android:icon="@drawable/stop1"
        app:showAsAction="always"
        android:title="@string/b_join_game" 
        android:onClick="onClick_Join_Game"/>
    
    <item
        android:id="@+id/action_change_identity"
        android:icon="@drawable/ball_blue_2"
        app:showAsAction="always"
        android:title="@string/reenter_properties" 
        android:onClick="onClick_ReEnter_Properties"/>
</menu>
