<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rabbit4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/button_add_targets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_New_Game"
        android:text="@string/b_new_game" />

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_Join_Game"
        android:text="@string/b_join_game" />

    <Button
        android:id="@+id/button_quit_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_Quit_Game"
        android:text="@string/button_leave_game"
        android:visibility="invisible" />

</LinearLayout>